typo & images düzeltildi

--- a/trunk/web/projeler/turkce/y10me/node_3.html
+++ b/trunk/web/projeler/turkce/y10me/node_3.html
@@ -57,13 +57,13 @@ resmi yerelleştirme çalışmalarını listelenmektedir.<BR>
 <BR>
 
 <H3><A NAME="htoc3">2.1</A>&nbsp;&nbsp;GNOME Türkiye</H3>
-<IMG SRC="y10me001.gif"><BR>
+<IMG SRC="logo/gnomelogo.png"><BR>
 <BR>
 GNOME masaüstü ortamının yerelleştirme çalışmalarını yürütmenin yanı
 sıra GNOME masaüstü ortamını tanıtmayı ve geliştirilmesine katkıda
 bulunmayı amaçlıyorlar.
 <DL COMPACT=compact><DT>
-<B>Web&nbsp;Sayfaları:</B><DD><A HREF="www.gnome.org.tr"><TT>www.gnome.org.tr</TT></A>
+<B>Web&nbsp;Sayfaları:</B><DD><A HREF="http://www.gnome.org.tr"><TT>www.gnome.org.tr</TT></A>
 <DT><B>Durum&nbsp;Sayfası:</B><DD><A HREF="http://l10n-status.gnome.org/"><TT>http://l10n-status.gnome.org/</TT></A>
 <DT><B>E-posta&nbsp;Listesi&nbsp;:</B><DD><A HREF="http://mail.gnome.org/mailman/listinfo/gnome-turk"><TT>http://mail.gnome.org/mailman/listinfo/gnome-turk</TT></A>
 </DL>
