--- a/trunk/web/projeler/turkce/y10me/node_4.html
+++ b/trunk/web/projeler/turkce/y10me/node_4.html
@@ -57,7 +57,7 @@ resmi yerelleştirme çalışmalarını listelenmektedir.<BR>
 <BR>
 
 <H3><A NAME="htoc4">2.2</A>&nbsp;&nbsp;GNU-TR</H3>
-<IMG SRC="y10me002.gif"><BR>
+<IMG SRC="logo/gnulogo.jpg"><BR>
 <BR>
 Linux'ta bulunan GNU yazılımlarına Türkçe desteği veriyorlar.
 <DL COMPACT=compact><DT>
