--- a/trunk/web/projeler/turkce/y10me/node_5.html
+++ b/trunk/web/projeler/turkce/y10me/node_5.html
@@ -57,7 +57,7 @@ resmi yerelleştirme çalışmalarını listelenmektedir.<BR>
 <BR>
 
 <H3><A NAME="htoc5">2.3</A>&nbsp;&nbsp;KDE Türkiye</H3>
-<IMG SRC="y10me003.gif"><BR>
+<IMG SRC="logo/kdelogo.jpg"><BR>
 <BR>
 KDE masaüstü ortamının yerelleştirme çalışmalarını yürütüyor ve tanıtımını
 yapıyorlar.
