--- a/trunk/web/projeler/turkce/y10me/node_8.html
+++ b/trunk/web/projeler/turkce/y10me/node_8.html
@@ -57,9 +57,9 @@ resmi yerelleştirme çalışmalarını listelenmektedir.<BR>
 <BR>
 
 <H3><A NAME="htoc8">2.6</A>&nbsp;&nbsp;PostgreSQL Türkçe</H3>
-<IMG SRC="y10me004.gif"><BR>
+<IMG SRC="logo/postgresql.png"><BR>
 <BR>
-PostgreSQL veritabanı sunucucu ve yardımcı araçlarına Türkçe desteği
+PostgreSQL veritabanı sunucu ve yardımcı araçlarına Türkçe desteği
 eklemenin yanı sıra yazılım için Türkçe belgeler hazırlıyorlar.
 <DL COMPACT=compact><DT>
 <B>Proje&nbsp;Sayfası:</B><DD><A HREF="http://sourceforge.net/projects/pgsqlturkce"><TT>http://sourceforge.net/projects/pgsqlturkce</TT></A>
