--- a/trunk/web/projeler/turkce/y10me/y10me.html
+++ b/trunk/web/projeler/turkce/y10me/y10me.html
@@ -108,13 +108,13 @@ ile listelenmiştir.<BR>
 
 <H3><A NAME="htoc3">2.1</A>&nbsp;&nbsp;GNOME Türkiye</H3><!--SEC END -->
 
-<IMG SRC="y10me001.gif"><BR>
+<IMG SRC="logo/gnomelogo.png"><BR>
 <BR>
 GNOME masaüstü ortamının yerelleştirme çalışmalarını yürütmenin yanı
 sıra GNOME masaüstü ortamını tanıtmayı ve geliştirilmesine katkıda
 bulunmayı amaçlıyorlar.
 <DL COMPACT=compact><DT>
-<B>Web&nbsp;Sayfaları:</B><DD><A HREF="www.gnome.org.tr"><TT>www.gnome.org.tr</TT></A>
+<B>Web&nbsp;Sayfaları:</B><DD><A HREF="http://www.gnome.org.tr"><TT>www.gnome.org.tr</TT></A>
 <DT><B>Durum&nbsp;Sayfası:</B><DD><A HREF="http://l10n-status.gnome.org/"><TT>http://l10n-status.gnome.org/</TT></A>
 <DT><B>E-posta&nbsp;Listesi&nbsp;:</B><DD><A HREF="http://mail.gnome.org/mailman/listinfo/gnome-turk"><TT>http://mail.gnome.org/mailman/listinfo/gnome-turk</TT></A>
 </DL>
@@ -122,7 +122,7 @@ bulunmayı amaçlıyorlar.
 
 <H3><A NAME="htoc4">2.2</A>&nbsp;&nbsp;GNU-TR</H3><!--SEC END -->
 
-<IMG SRC="y10me002.gif"><BR>
+<IMG SRC="logo/gnulogo.jpg"><BR>
 <BR>
 Linux'ta bulunan GNU yazılımlarına Türkçe desteği veriyorlar.
 <DL COMPACT=compact><DT>
@@ -133,7 +133,7 @@ Linux'ta bulunan GNU yazılımlarına Türkçe desteği veriyorlar.
 
 <H3><A NAME="htoc5">2.3</A>&nbsp;&nbsp;KDE Türkiye</H3><!--SEC END -->
 
-<IMG SRC="y10me003.gif"><BR>
+<IMG SRC="logo/kdelogo.jpg"><BR>
 <BR>
 KDE masaüstü ortamının yerelleştirme çalışmalarını yürütüyor ve tanıtımını
 yapıyorlar.
@@ -167,9 +167,9 @@ geliştirilmesine destek oluyorlar.
 
 <H3><A NAME="htoc8">2.6</A>&nbsp;&nbsp;PostgreSQL Türkçe</H3><!--SEC END -->
 
-<IMG SRC="y10me004.gif"><BR>
+<IMG SRC="logo/postgresql.png"><BR>
 <BR>
-PostgreSQL veritabanı sunucucu ve yardımcı araçlarına Türkçe desteği
+PostgreSQL veritabanı sunucusu ve yardımcı araçlarına Türkçe desteği
 eklemenin yanı sıra yazılım için Türkçe belgeler hazırlıyorlar.
 <DL COMPACT=compact><DT>
 <B>Proje&nbsp;Sayfası:</B><DD><A HREF="http://sourceforge.net/projects/pgsqlturkce"><TT>http://sourceforge.net/projects/pgsqlturkce</TT></A>
@@ -183,12 +183,12 @@ eklemenin yanı sıra yazılım için Türkçe belgeler hazırlıyorlar.
 
 <H3><A NAME="htoc10">3.1</A>&nbsp;&nbsp;belgeler.org</H3><!--SEC END -->
 
-<IMG SRC="y10me005.gif"><BR>
+<IMG SRC="logo/belgelerlogo.png"><BR>
 <BR>
 Özgür lisansa sahip pek çok belgenin Türkçe çevirilerinin yanı sıra
 özgün belgeler ile zengin bir belge arşivi oluşturuyorlar.
 <DL COMPACT=compact><DT>
-<B>Web&nbsp;Sayfaları:</B><DD><A HREF="www.belgeler.org"><TT>www.belgeler.org</TT></A>
+<B>Web&nbsp;Sayfaları:</B><DD><A HREF="http://www.belgeler.org"><TT>www.belgeler.org</TT></A>
 </DL>
 <!--TOC section Linux Dağıtımları Yerelleştirme Çalışmaları-->
 
@@ -198,7 +198,7 @@ eklemenin yanı sıra yazılım için Türkçe belgeler hazırlıyorlar.
 
 <H3><A NAME="htoc12">4.1</A>&nbsp;&nbsp;Debian Linux</H3><!--SEC END -->
 
-<IMG SRC="y10me006.gif"><BR>
+<IMG SRC="logo/debianlogo.png"><BR>
 <BR>
 Debian GNU/Linux yerelleştirme çalışmalarını yürütüyorlar.
 <DL COMPACT=compact><DT>
@@ -208,7 +208,7 @@ Debian GNU/Linux yerelleştirme çalışmalarını yürütüyorlar.
 
 <H3><A NAME="htoc13">4.2</A>&nbsp;&nbsp;Fedora Linux</H3><!--SEC END -->
 
-<IMG SRC="y10me007.gif"><BR>
+<IMG SRC="logo/fedoralogo.png"><BR>
 <BR>
 Fedora Linux yerelleştirme çalışmalarını yürütüyorlar.
 <DL COMPACT=compact><DT>
@@ -219,7 +219,7 @@ Fedora Linux yerelleştirme çalışmalarını yürütüyorlar.
 
 <H3><A NAME="htoc14">4.3</A>&nbsp;&nbsp;Mandrake Linux</H3><!--SEC END -->
 
-<IMG SRC="y10me008.gif"><BR>
+<IMG SRC="logo/mandrake.png"><BR>
 <BR>
 Mandrake Linux yerelleştirme çalışmalarını yürütüyorlar.
 <DL COMPACT=compact><DT>
