--- a/web/eng/projeler/masaustu/zemberek-pardus/index.html
+++ b/web/eng/projeler/masaustu/zemberek-pardus/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>:: ulusal dağıtım project :: tübitak-uekae ::</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../../../stil.css" rel="stylesheet" type="text/css">
+	<link href="../stil.css" rel="stylesheet" type="text/css">
 	<link rel="shortcut icon" type="image/x-icon" href="../../../images/favicon.ico">
 </head>
 
@@ -19,7 +19,7 @@
 <table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
 <tr>
 <td width="620" height="60">
-<img src="../../../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
+<img src="../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
 </td>
 </tr>
 
@@ -46,7 +46,7 @@
 <div class="metin">
 
 <p>
-<img src="../../../images/bullet6.png" alt="nokta"
+<img src="../images/bullet6.png" alt="nokta"
      align="top"><span class="baslik"> Zemberek Pardus</span>
 </p>
 
@@ -62,7 +62,7 @@ Project's goal is to respond to requirements of Pardus's spell checking and gram
 <br>
 
 <p>
-<img src="../../../images/bullet6.png" alt="nokta"
+<img src="../images/bullet6.png" alt="nokta"
      align="top"><span class="baslik"> Scope</span>
 </p>
 
@@ -81,7 +81,7 @@ The following job descriptions are valid under the project.
 
 
 <p>
-<img src="../../../images/bullet6.png" alt="nokta"
+<img src="../images/bullet6.png" alt="nokta"
      align="top"><span class="baslik"> Screenshots</span>
 
 <center><table class="belge" cellspacing=10><tbody>
@@ -101,7 +101,7 @@ The following job descriptions are valid under the project.
 
 
 <p>
-<img src="../../../images/bullet6.png" alt="nokta"
+<img src="../images/bullet6.png" alt="nokta"
      align="top"><span class="baslik"> E-Mail Lists</span>
 </p>
 
@@ -110,7 +110,7 @@ The following job descriptions are valid under the project.
 </p>
 
 <p>
-<img src="../../../images/bullet6.png" alt="nokta" align="top"><span class="baslik"> Source Codes</span>
+<img src="../images/bullet6.png" alt="nokta" align="top"><span class="baslik"> Source Codes</span>
 </p>
 
 <p class="icmetin">
