zemberek index.html için css ve images güncellemesi

--- a/trunk/web/eng/projeler/masaustu/zemberek-pardus/index.html
+++ b/trunk/web/eng/projeler/masaustu/zemberek-pardus/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>:: ulusal dağıtım project :: tübitak-uekae ::</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../stil.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="../../../images/favicon.ico">
+	<link href="http://www.uludag.org.tr/stil.css" rel="stylesheet" type="text/css">
+	<link rel="shortcut icon" type="image/x-icon" href="http://www.uludag.org.tr/images/favicon.ico">
 </head>
 
 <body class="arka">
@@ -19,7 +19,7 @@
 <table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
 <tr>
 <td width="620" height="60">
-<img src="../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
+<img src="http://www.uludag.org.tr/images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
 </td>
 </tr>
 
@@ -27,15 +27,15 @@
 <tr>
 <td width="680" height="19" valign="top" bgcolor="#B9D0B3">
 <p class="menubar">
-<a href="../../../index.html">Home</a>
-| <a href="../../../hakkimizda.html">About</a>
-| <a href="../../../projeler/index.html">Projects</a>
-| <a href="../../../belgeler/index.html">Documents</a>
-| <a href="../../../urunler/index.html">Products</a>
-| <a href="../../../sss.html">FAQ</a>
-| <a href="../../../iletisim.html">Contact Us</a>
-| <a href="../../../basin/index.html">Press</a>
-| <a href="../../../../index.html">Türkçe</a>
+<a href="http://www.uludag.org.tr/eng/index.html">Home</a>
+| <a href="http://www.uludag.org.tr/eng/hakkimizda.html">About</a>
+| <a href="http://www.uludag.org.tr/eng/projeler/index.html">Projects</a>
+| <a href="http://www.uludag.org.tr/eng/belgeler/index.html">Documents</a>
+| <a href="http://www.uludag.org.tr/eng/urunler/index.html">Products</a>
+| <a href="http://www.uludag.org.tr/eng/sss.html">FAQ</a>
+| <a href="http://www.uludag.org.tr/eng/iletisim.html">Contact Us</a>
+| <a href="http://www.uludag.org.tr/eng/basin/index.html">Press</a>
+| <a href="http://www.uludag.org.tr/index.html">Türkçe</a>
 </p>
 </tr>
 </table>
@@ -46,7 +46,7 @@
 <div class="metin">
 
 <p>
-<img src="../images/bullet6.png" alt="nokta"
+<img src="http://www.uludag.org.tr/images/bullet6.png" alt="nokta"
      align="top"><span class="baslik"> Zemberek Pardus</span>
 </p>
 
@@ -62,7 +62,7 @@ Project's goal is to respond to requirements of Pardus's spell checking and gram
 <br>
 
 <p>
-<img src="../images/bullet6.png" alt="nokta"
+<img src="http://www.uludag.org.tr/images/bullet6.png" alt="nokta"
      align="top"><span class="baslik"> Scope</span>
 </p>
 
@@ -81,7 +81,7 @@ The following job descriptions are valid under the project.
 
 
 <p>
-<img src="../images/bullet6.png" alt="nokta"
+<img src="http://www.uludag.org.tr/images/bullet6.png" alt="nokta"
      align="top"><span class="baslik"> Screenshots</span>
 
 <center><table class="belge" cellspacing=10><tbody>
@@ -101,7 +101,7 @@ The following job descriptions are valid under the project.
 
 
 <p>
-<img src="../images/bullet6.png" alt="nokta"
+<img src="http://www.uludag.org.tr/images/bullet6.png" alt="nokta"
      align="top"><span class="baslik"> E-Mail Lists</span>
 </p>
 
@@ -110,7 +110,7 @@ The following job descriptions are valid under the project.
 </p>
 
 <p>
-<img src="../images/bullet6.png" alt="nokta" align="top"><span class="baslik"> Source Codes</span>
+<img src="http://www.uludag.org.tr/images/bullet6.png" alt="nokta" align="top"><span class="baslik"> Source Codes</span>
 </p>
 
 <p class="icmetin">
