--- a/web/projeler/kalite/projeler.html
+++ b/web/projeler/kalite/projeler.html
@@ -120,7 +120,7 @@
 		  <td class="metin" align="left"><b>- Sorumlu:</b></td><td class="metin" align="left">Ali Erdinç Köroğlu (koordinatör).</td>
 		</tr>
 	      	<tr>
-		  <td class="metin" align="left"><b>- Proje Takımı:</b></td><td class="metin" align="left"> Doruk Fişek, Necati Demir, Mehmet Ekiz, Engin İlkiz, Yasin Bahtiyar, Mehmet Uluer, Yavuz Gürcan.</td>
+		  <td class="metin" align="left"><b>- Proje Takımı:</b></td><td class="metin" align="left"> Doruk Fişek, Necati Demir, Mehmet Ekiz, Engin İlkiz, Ahmet Aygün, Yasin Bahtiyar, Mehmet Uluer, Yavuz Gürcan, Leyla Bora.</td>
 		</tr>
 	      </table>
 	      </div>
