zemberek için yeni ekran görüntüsü.

--- a/trunk/web/eng/projeler/masaustu/zemberek-pardus/index.html
+++ b/trunk/web/eng/projeler/masaustu/zemberek-pardus/index.html
@@ -93,6 +93,9 @@ The following job descriptions are valid under the project.
 <td><img src="./zemberek_kopete.jpg"></td>
 </tr>
 <tr>
+<td><img src="./zemberek_kopete2.jpg"></td>
+</tr>
+<tr>
 <td><img src="./zemberek_spell.jpg"></td>
 </tr>
 
