--- a/trunk/web/projeler/masaustu/zemberek-pardus/index.html
+++ b/trunk/web/projeler/masaustu/zemberek-pardus/index.html
@@ -99,6 +99,9 @@ Proje çerçevesinde aşağıdaki iş tanımları geçerlidir.
 <td><img src="./zemberek_kopete.jpg"></td>
 </tr>
 <tr>
+<td><img src="./zemberek_kopete2.jpg"></td>
+</tr>
+<tr>
 <td><img src="./zemberek_spell.jpg"></td>
 </tr>
 
