gorsel deponun linki kirikmis..

--- a/trunk/web/eng/sss.html
+++ b/trunk/web/eng/sss.html
@@ -284,7 +284,7 @@ Plugins were added to Pardus as their licenses permitted. There are setup tools 
 		
 		<a name="logo" href="./sss.html#top"><i>Where can i find visual materials for Pardus?</i></a><br>
         <br>
-You can find visual materials and screen shots from <a href="http://www.uludag.org.tr/%7Eumut/">Pardus
+You can find visual materials and screen shots from <a href="http://cekirdek.uludag.org.tr/%7Eumut/">Pardus
 Visual Store</a>.
 <br>
 <!--         <br> -->
