--- a/web/sss.html
+++ b/web/sss.html
@@ -392,7 +392,7 @@ grub>initrd (cd)/boot/initrd.gz
 		<a name="logo" href="./sss.html#top"><i>Pardus'un
 		görsel materyallerine, ekran görüntülerine nasıl ulaşabilirim?</i></a><br>
         <br>
-Pardus'a ait görsel materyale ve ekran görüntülerine <a href="http://www.uludag.org.tr/%7Eumut/">Pardus
+Pardus'a ait görsel materyale ve ekran görüntülerine <a href="http://cekirdek.uludag.org.tr/%7Eumut/">Pardus
 Görsel Depo</a>'sundan	ulaşabilirsiniz.<br>
         <br>
         <a name="gorselmateryal" href="./sss.html#top"><i>Pardus'un
