--- a/web/eng/index.html
+++ b/web/eng/index.html
@@ -111,6 +111,15 @@ arbitrament was announced in Uludağ Weekly Newsletter published at
                 </tr>
                 <tr>
                   <td class="metin" valign="top"> <br>
+                  <img src="images/bullet5.png" alt="nokta" height="11"
+ width="11"> <strong> 2005-05-05 </strong>
+// Latest <a href="ftp://ftp.uludag.org.tr/pub/pardus/rootfs/0.0.6">Root
+File System (0.0.6)</a> of Pardus has been announced. With this
+release, <a
+ href="http://cekirdek.uludag.org.tr/%7Emeren/root_fs_kurulum/">a new
+document </a>comes. <a
+ href="http://cekirdek.uludag.org.tr/%7Emeren/root_fs_kurulum/">The
+document</a> describes how to install Root File System.<br>
                   <img src="./images/bullet5.png" alt="nokta"
  height="11" width="11"> <strong> 2005-03-16 </strong>
 // Web pages was re-designed in accordance with incoming requests and
@@ -118,11 +127,12 @@ questions.<br>
                   <img src="./images/bullet5.png" alt="nokta"
  height="11" width="11"> <strong> 2004-12-07</strong>
 // Uludağ Weeky Newsletter archive was started to be published. You can
-access Newsletters via rss.<br>
-                  <img src="./images/bullet5.png" alt="nokta"
- height="11" width="11"> <strong> 2004-11-19</strong>
-// The first Uludağ Newsletter has been published... </td>
+access Newsletters via rss. (<a
+ href="http://www.uludag.org.tr/bulten/bulten.xml">rss feed</a>) </td>
                   <td class="metin" valign="top"> <br>
+                  <img src="images/bullet5.png" alt="nokta" height="11"
+ width="11"> <a href="bulten/arsiv/21032005.html"><strong>2005-03-21</strong></a>
+// Web page, Pardus 1.0, FTP Service ...<br>
                   <img src="./images/bullet5.png" alt="nokta"
  height="11" width="11"> <strong><a href="bulten/arsiv/27022005.html">2005-02-27</a></strong>
 // Open Source Days, quality team, new documents... <br>
