--- a/web/index.html
+++ b/web/index.html
@@ -100,6 +100,11 @@ karar 30 Ocak 2005'te yayınlanan Uludağ Haftalık Bülteni'nde açıklanmışt
 <tr>
 <td valign="top" class="metin">
 <br>
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11">
+<strong> 05 Mayıs 2005</strong>
+// Pardus kök dosya sisteminin 0.0.6 numaralı versiyonu <a href="ftp://ftp.uludag.org.tr/pub/pardus/rootfs/0.0.6/">yayınlandı</a>.
+Kurulum için yardımcı olması ümidi ile hazırlanmış bir belge de <a href="http://cekirdek.uludag.org.tr/~meren/root_fs_kurulum/">bu</a> adreste.<br>
+
 
 <img src="./images/bullet5.png" alt="nokta" width="11" height="11">
 <strong> 16 Mart 2005</strong>
