Yeni bülten ana sayfadan duyurulsun!

--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -117,7 +117,10 @@ ile de ulaşabilirsiniz (<a href="http://www.uludag.org.tr/bulten/bulten.xml">rs
 </td>
 
 <td valign="top" class="metin">
-
+<br>
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11"> 
+<strong><a href="bulten/arsiv/05052005.html">05 Mayıs 2005</a></strong>
+// Pardus 1.1, Kök dosya sistemi 0.0.6, Pardul, Pardil, Zemberek, ViewCVS...
 <br>
 <img src="./images/bullet5.png" alt="nokta" width="11" height="11"> 
 <strong><a href="bulten/arsiv/21032005.html">21 Mart 2005</a></strong>
