--- a/trunk/web/basin/index.html
+++ b/trunk/web/basin/index.html
@@ -55,7 +55,7 @@
 						<br><i>"Hackerlar cepheye PC'ler miğfer klavyeler süngü"</i>
 						<br><br>   
 						
-						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.04.09/hur_eyasam.jpg">Hürriyet Gazetesi e-Yaşam</a>, 09.04.2005</span>
+						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.04.08/hur_e.jpg">Hürriyet Gazetesi e-Yaşam</a>, 08.04.2005</span>
 						<br><i>"Türkiye'nin ulusal işletim sistemi: Pardus"</i>
 						<br><br> 
 						  
