--- a/web/basin/index.html
+++ b/web/basin/index.html
@@ -64,7 +64,7 @@
 						<br><br> 
 						      
                   <span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.04.03/ortadogu.jpg">Ortadoğu Gazetesi</a>, 03.04.2005</span>
-						<br><i>"Bİlk ulusal işletim sistemi Pardus"</i>
+						<br><i>"İlk ulusal işletim sistemi Pardus"</i>
 						<br><br>    
 						
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.04.01/infomag5.jpg">InfoMag Dergisi</a>, 01.04.2005</span>
