PCCD 1.1 sayfası eklendi, M.Ali Akmanalp'e teşekkür ederiz. Özel teşekkür: A.Murat Eren'e teşvik çalışmalarından dolayı teşekkür ederiz.

--- a/trunk/web/urunler/index.html
+++ b/trunk/web/urunler/index.html
@@ -57,6 +57,8 @@
 						<br><br><br>
                         <span class="baslik"><img src="../images/bullet-krm.png"> Pardus Çalışan CD</span>
 						<br><br>
+						<a href="./pardus_calisan_cd_1.1.html">Pardus Çalışan CD 1.1 (tam sürüm)</a> (05/05/2005)
+						<br><br>
 						<a href="./pardus_calisan_cd_1.0.html">Pardus Çalışan CD 1.0 (tam sürüm)</a> (04/03/2005)
 						<br><br>
 						<a href="./pardus_calisan_cd_1.0b.html">Pardus Çalışan CD 1.0b (deneme sürümü)</a> (02/02/2005)
