--- a/trunk/web/urunler/pardus_calisan_cd_1.1.html
+++ b/trunk/web/urunler/pardus_calisan_cd_1.1.html
@@ -49,12 +49,13 @@
 <td width="20" height="286" valign="top"><img src="../images/bullet6.png" width="20" height="20" hspace="0" vspace="0" align="top"></td>
 <td width="10" valign="top">&nbsp;</td>
 <td width="661" valign="top" class="metin"><p>
-						<span class="baslik"><font face="Verdana, Arial, Helvetica, sans-serif">Pardus Çalışan CD 1.0b (Deneme Sürümü)</font></span>
+						<span class="baslik"><font face="Verdana, Arial, Helvetica, sans-serif">Pardus Çalışan CD 1.1</font></span>
                         			<br><br>
-						Pardus Çalışan CD deneme sürümü, Ulusal Dağıtım Projesi tarafından Çalışan CD'nin nihayi
-						sürümünden önce denenmesi ve hatalarının düzeltilmesi için hazırlanmış ve duyurulmuştur.
+						Pardus Çalışan CD, Ulusal Dağıtım Projesi tarafından Türkiye'deki bilgisayar kullanıcılarının
+						proje hakkında fikir sahibi olması ve deneyenlerin eleştiri ve görüşlerini zamanında
+						iletebilmesi için hazırlanmıştır.
 						<br><br>
-						Kurulum gerektirmeden kullanılabilir,
+						Çalışan CD kurulum gerektirmeden kullanılabilir,
 						diskinizdeki bilgilere zarar vermez.
 						<br><br><br>
 						
@@ -62,8 +63,9 @@
 						<br><br>
 						<ul>
 							<li>Linux (2.6.10) çekirdeği,
-							<li>KDE 3.3.2 masaüstü ortamı,
-							<li>Ofis araçları (OpenOffice.org 1.1.4),
+							<li>KDE 3.4 masaüstü ortamı,
+							<li>Gcc-3.3.5.20050130 ve Glibc-2.3.4.20041102,
+							<li>Ofis araçları (OpenOffice.org 1.9.95 + Zemberek),
 							<li>İnternet araçları,
 							<li>Çokluortam ve grafik araçları ve oyunların yanı sıra
 							<li>ÇOMAR yapılandırma yöneticisi,
@@ -71,7 +73,37 @@
 							<li>TASMA gibi yardımcı araçların ön sürümleri yer almaktadır.
 						</ul>
 						<br><br>
-						
+
+						<span class="baslik">Yenilikler</span>
+						<ul>
+							<li>X öntanımlı olarak v4l modülü yükleyecek şekilde ayarlandı
+							<li>Firefox yerimleri Türkçe'ye çevrildi
+							<li>NTFS modülü parametreleri yeni biçime uygun olarak yazıldı
+							<li>Gtk-QT-engine öntanımlı yazıtipi boyutu değiştirildi
+							<li>Mozilla ve türevi tarayıcılar için Java eklentisi sembolik bağı düzeltildi
+							<li>Gconf ve bazı modem sürücüleri için /etc altındaki sembolik bağlar düzeltildi
+						</ul>
+						<br><br>
+
+						<span class="baslik">Yenilenen Programlar</span>
+						<ul>
+							<li>Glibc-2.3.4.20041102
+							<li>Gcc-3.3.5.20050130
+							<li>Xorg-X11 6.8.2
+							<li>KDE 3.4
+							<li>Qt-3.3.4
+							<li>OpenOffice-1.9.95 + Zemberek
+							<li>Zemberek Server - KDE Zemberek Entegrasyonu
+							<li>Mplayer-1.0pre7
+							<li>Gimp-2.2.6
+							<li>Imposter-0.3
+							<li>Konversation-0.17
+							<li>K3b-0.11.18
+							<li>Thunderbird-1.0.2
+							<li>Firefox-1.0.3
+						</ul>
+						<br><br>
+
 						<span class="baslik">Minimum Sistem Gereksinimleri</span>
 						<br><br>
 						<ul>
@@ -86,13 +118,13 @@
 						Pardus Çalışan CD'yi edinmek için aşağıdaki bağlantıları kullanabilirsiniz:
 						<br><br>
 						FTP:<br><br>
-						&nbsp;&nbsp;ISO:
-						<a href="ftp://ftp.uludag.org.tr/pub/pardus/calisan/1.0-beta/pardus-calisan_cd-1.0b.iso">
-ftp://ftp.uludag.org.tr/pub/pardus/calisan/1.0-beta/pardus-calisan_cd-1.0b.iso
+						&nbsp;&nbsp;ISO: 
+<a href="ftp://ftp.uludag.org.tr/pub/pardus/calisan/1.1/pardus_calisan_cd-1.1.iso">
+ftp://ftp.uludag.org.tr/pub/pardus/calisan/1.1/pardus_calisan_cd-1.1.iso
 </a><br>
-						&nbsp;&nbsp;MD5SUM:
-<a href="ftp://ftp.uludag.org.tr/pub/pardus/calisan/1.0-beta/pardus-calisan_cd-1.0b.iso.md5sum">
-ftp://ftp.uludag.org.tr/pub/pardus/calisan/1.0-beta/pardus-calisan_cd-1.0b.iso.md5sum
+						&nbsp;&nbsp;MD5SUM: 
+<a href="ftp://ftp.uludag.org.tr/pub/pardus/calisan/1.1/pardus_calisan_cd-1.1.md5sum">
+ftp://ftp.uludag.org.tr/pub/pardus/calisan/1.1/pardus_calisan_cd-1.1.md5sum
 </a><br><br>
 						<i>MD5SUM özet dosyası, indirdiğiniz ISO dosyasının bütünlüğünü kontrol etmek ve indirme işlemi esnasında
 						herhangi bir zarar görmediğinden emin olmak için kullanılır. 
