--- a/trunk/web/eng/projeler/kalite/projeler.html
+++ b/trunk/web/eng/projeler/kalite/projeler.html
@@ -52,6 +52,10 @@
                   <td align="left" class="metin"> Design Phase.</td>
 		</tr>
 		<tr>
+		  <td class="metin" align="left"><b>- SVN:</b></td><td class="metin" align="left">
+		  <a href="http://svn.uludag.org.tr/uludag/trunk/pardul/">http://svn.uludag.org.tr/uludag/trunk/pardul/</a></td>
+		</tr>
+		<tr>
 		          <td class="metin" align="left"><b>- Responsible:</b></td>
                   <td class="metin" align="left"> Emre Saglam (design, management).</td>
 		</tr>
@@ -90,8 +94,12 @@
                   <td align="left" class="metin"> Development Phase.</td>
 		</tr>
 		<tr>
+		  <td class="metin" align="left"><b>- SVN:</b></td><td class="metin" align="left">
+		  <a href="http://svn.uludag.org.tr/uludag/trunk/pardil/">http://svn.uludag.org.tr/uludag/trunk/pardil/</a></td>
+		</tr>
+		<tr>
 		  <td class="metin" align="left"><b>- Responsible:</b></td>
-                  <td class="metin" align="left"> Bahadýr Kandemir (design, implementation).</td>
+                  <td class="metin" align="left"> BahadÄ±r Kandemir (design, implementation).</td>
 		</tr>
 	      </table>
 	      </div>
@@ -126,7 +134,8 @@
 	      	<tr>
 		          <td class="metin" align="left"><b>- Project Team:</b></td>
                   <td class="metin" align="left"> Doruk Fisek, Necati Demir, Mehmet 
-                    Ekiz, Engin Ilkiz, Yasin Bahtiyar, Mehmet Uluer, Yavuz Gurcan.</td>
+                    Ekiz, Engin Ilkiz, Ahmet Aygun, Yasin Bahtiyar, Mehmet Uluer, Yavuz Gurcan, Leyla Bora.
+		</td>
 		</tr>
 	      </table>
 	      </div>
