--- a/web/eng/projeler/kalite/index.html
+++ b/web/eng/projeler/kalite/index.html
@@ -35,9 +35,9 @@
   <td bgcolor="#EEEEEE">
 	<table width="800" border="0" align="center" cellpadding="6" cellspacing="10">
 	  <tr bgcolor="#004444">
-	    <td>&nbsp;</td>
-	    <td class="baslik"><br>
-            <p>:: Quality Team, Mission ::</p>
+	  <tr bgcolor="#004444">
+	    <td height="348">&nbsp;</td>
+	    <td class="baslik"><br><p><img src="cuce01.png" width="150" height="150" hspace="10" vspace="10" align="left">:: Quality Team, Mission ::</p>
 	        <p class="metin">The Uludag Quality Team aims to form a good starting 
               point for people of any level who wish to help and accelerate the 
               operation of the project. If you are always thinking &quot;I want 
@@ -48,7 +48,7 @@
             <p class="metin">The mission of the Quality Team is to form a team 
               of people working to meet the requirements of the project such as 
               localization, documentation, application and version tests, bug 
-              reporting, user-interface test and evaluation, software development, 
+              <img src="cuce02.png" width="91" height="150" hspace="10" vspace="10" align="right"> reporting, user-interface test and evaluation, software development, 
               internationalization of web pages and documents, presenting the 
               project in a right way and reach new people.<br>
               <br>
