kalite sayfasini biraz guncelledim..

--- a/trunk/web/projeler/kalite/index.html
+++ b/trunk/web/projeler/kalite/index.html
@@ -35,7 +35,7 @@
 	<table width="800" border="0" align="center" cellpadding="6" cellspacing="10">
 	  <tr bgcolor="#004444">
 	    <td height="348">&nbsp;</td>
-	    <td class="baslik"><br><p><img src="cuce01.png" width="150" height="150" hspace="10" vspace="10" align="left">:: Kalite Takımı, Amaç ::</p>
+	    <td class="baslik"><br>:: Kalite Takımı, Amaç ::</p>
 	      <p class="metin">
 	      
 	     Uludağ Projesi Kalite Takımı, projenin işleyişini hızlandırmak ve yardım etmek isteyen her
