--- a/trunk/web/projeler/kalite/projeler.html
+++ b/trunk/web/projeler/kalite/projeler.html
@@ -127,7 +127,40 @@
 	      <br>
 	      </p></td>
   	</tr>
+
+	<tr bgcolor="#004444">
+	    <td>&nbsp;</td>
+	    <td><p class="baslik" align="center">:: Gözlük (Bir Sözlük Uygulaması) ::</p>
+	      <p class="metin">
+	      Gözlük, <a href="http://svn.uludag.org.tr/uludag/trunk/ulubot/">UluBot</a>'un da kullandığı ve <a href="http://svn.uludag.org.tr/uludag/trunk/ulubot/sozluk/s%c3%b6zl%c3%bck.xml">bu adresten</a> de bir örneğine ulaşabileceğiniz XML yapısındaki sözlük dosyalarının düzenlenmesi, içinde kelime aranması gibi işlevleri
+	      kullanıcıya sunan bir uygulamadır.
+	      <br><br><br>
+	      <div align="center">
+	      <table border="0" width="90%">
+	      	<tr>
+		  <td align="left" class="metin" width="30%"><b>- Durum:</b></td><td align="left" class="metin"> Kodlanıyor.</td>
+		</tr>
+		<tr>
+		  <td class="metin" align="left"><b>- SVN:</b></td><td class="metin" align="left">
+		  <a href="http://svn.uludag.org.tr/uludag/trunk/web/eng/">http://svn.uludag.org.tr/uludag/trunk/gozluk/</a></td>
+		</tr>
+	      	<tr>
+		  <td class="metin" align="left"><b>- Sorumlu:</b></td><td class="metin" align="left">Kaya Oğuz.</td>
+		</tr>
+	      	<tr>
+		  <td class="metin" align="left"><b>- Proje Takımı:</b></td><td class="metin" align="left"> Kaya Oğuz, Barış Metin.</td>
+		</tr>
+	      	<tr>
+		  <td class="metin" align="left"><b>- Ekran Görüntüsü:</b><br><br><img src="./images/gozluk.png"></td>
+		</tr>
+	      </table>
+	      </div>
+	      <br>
+	      </p></td>
+  	</tr>
  
+ 
+
          </table>
 </td></tr></table>	
 </body>
