--- a/trunk/web/eng/urunler/index.html
+++ b/trunk/web/eng/urunler/index.html
@@ -56,6 +56,8 @@
 						<br><br><br>
                         <span class="baslik"><img src="../images/bullet-krm.png"> Pardus Live CD</span>
 						<br><br>
+						<a href="./pardus_calisan_cd_1.1.html">Pardus Live CD 1.1 (full version)</a> (05/05/2005)
+						<br><br>
 						<a href="./pardus_calisan_cd_1.0.html">Pardus Live CD 1.0 (full version)</a> (04/03/2005)
 						<br><br>
 						<a href="./pardus_calisan_cd_1.0b.html">Pardus Live CD 1.0b (experimental version)</a> (02/02/2005)
