--- a/trunk/web/eng/belgeler/sozlesme/index.html
+++ b/trunk/web/eng/belgeler/sozlesme/index.html
@@ -47,39 +47,36 @@
 <table class='navbar'><tbody><tr><td class='navhide'><img src='../../images/nav_back.png'> Önceki sayfa</td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_1.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
-<H1 ALIGN=center>Proje Ana Sözleşmesi</H1>
+<H1 ALIGN=center>Project Main Contract</H1>
 
 
 
-<H2><A NAME="htoc1">1</A>&nbsp;&nbsp;Giriş</H2>
+<H2><A NAME="htoc1">1</A>&nbsp;&nbsp;Introduction</H2>
 
-<H3><A NAME="htoc2">1.1</A>&nbsp;&nbsp;Vizyon</H3>
-Uludağ, UEKAE tarafından, bilişim okur-yazarlığına sahip bilgisayar
-kullanıcılarının temel masaüstü ihtiyaçlarını hedefleyerek; mevcut
-Linux dağıtımlarının üstün taraflarını kavram, mimari ya da kod olarak
-kullanan; otonom sisteme evrilebilecek bir yapılandırma çerçevesi
-ve araçları ile kurulum, yapılandırma ve kullanım kolaylığı sağlamak
-üzere geliştirilen bir GNU/Linux dağıtımıdır.<BR>
+<H3><A NAME="htoc2">1.1</A>&nbsp;&nbsp;Vision</H3>
+Uludag is GNU/Linux distribution developed by UEKAE according to computer
+literates basic desktop needs; uses existing distributions' dominant
+parts as concept, architecture or code; provides easy use, configuration,
+installation with configuration environment and tools that can be
+converted to an autonomous system.<BR>
 <BR>
 
-<H3><A NAME="htoc3">1.2</A>&nbsp;&nbsp;Destekleyici</H3>
+<H3><A NAME="htoc3">1.2</A>&nbsp;&nbsp;Supporter</H3>
 TÜBİTAK/UEKAE<BR>
 <BR>
 
-<H3><A NAME="htoc4">1.3</A>&nbsp;&nbsp;Yürütücü</H3>
-<FONT COLOR=navy>Erkan Tekman</FONT>, Proje Yöneticisi<BR>
+<H3><A NAME="htoc4">1.3</A>&nbsp;&nbsp;Project Leader</H3>
+<FONT COLOR=navy>Erkan Tekman</FONT>, Project Manager<BR>
 <BR>
 
-<H3><A NAME="htoc5">1.4</A>&nbsp;&nbsp;Varsayımlar</H3>
+<H3><A NAME="htoc5">1.4</A>&nbsp;&nbsp;Suppositions</H3>
 <UL><LI>
-Proje GPL lisanslı bir özgür yazılım projesi olacaktır. 
-<LI>Proje özgür yazılım felsefesine uygun olarak kamuya açık olarak yürütülecek
-ve katkıcıların yardımlarını kullanacaktır.
-<LI>Proje diğer Linux dağıtımlarının mimarilerini ve bileşenlerini devir
-alabilecek, açık kaynak kodlu (dağıtım bağımsız) projeleri doğrudan
-kullanabilecektir.
-<LI>Özgür yazılımlar için yapılan yerelleştirme (Türkçeleştirme) çalışmalarının
-ürünlerin doğrudan kullanılacaktır.
+Project will be GPL'd free software project. 
+<LI>Project will be public, compatible with free software philosophy,
+use contributors' work.
+<LI>Project can transfer other Linux distributions' architecture and components,
+will use open source (distribution independent) projects directly.
+<LI>Localization works for free softwares will be used directly.
 </UL>
 <table class='navbar'><tbody><tr><td class='navhide'><img src='../../images/nav_back.png'> Önceki sayfa</td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_1.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
@@ -91,7 +88,7 @@ kullanabilecektir.
 <p class="not">
 Information and documents on Uludağ Project web pages can be used freely anywhere with original source credit.
 <em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
+<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli, TÜRKİYE.</strong></em>
 For information and suggestion(s) please write to <a href="mailto:bilgi%20at%20uludag.org.tr">bilgi
 at uludag.org.tr</a>
 </p>
