--- a/trunk/web/eng/belgeler/sozlesme/node_1.html
+++ b/trunk/web/eng/belgeler/sozlesme/node_1.html
@@ -47,39 +47,36 @@
 <table class='navbar'><tbody><tr><td class='navbut'><a href='index.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navhide'><img src='../../images/nav_forward.png'> Sonraki sayfa</td></tr></tbody></table>
 
 
-<H1 ALIGN=center>Proje Ana Sözleşmesi</H1>
+<H1 ALIGN=center>Project Main Contract</H1>
 
 
 
-<H2><A NAME="htoc6">2</A>&nbsp;&nbsp;Proje Tanımı</H2>
+<H2><A NAME="htoc6">2</A>&nbsp;&nbsp;Project Definition</H2>
 
-<H3><A NAME="htoc7">2.1</A>&nbsp;&nbsp;Amaç<A NAME="amac"></A></H3>
-Dürtücü Teknolojiler (DT) olarak adlandırılan dağıtım altyapısını,
-Harcıalem Dağıtım (HD) olarak adlandırılan klasik dağıtım anlayışı
-ile birleştirerek; kullanışlı, kararlı ve geliştirilebilir bir işletim
-sistemi oluşturmak.<BR>
+<H3><A NAME="htoc7">2.1</A>&nbsp;&nbsp;Target<A NAME="amac"></A></H3>
+Creating a useful, stable, developable operating system with merging
+classical distribution concept named as HD and distribution infrastructure
+that named as Impulsive Technologies (DT).<BR>
 <BR>
 
-<H3><A NAME="htoc8">2.2</A>&nbsp;&nbsp;Sınırlar</H3>
+<H3><A NAME="htoc8">2.2</A>&nbsp;&nbsp;Limits</H3>
 <UL><LI>
-Mevcut dağıtımların paketlere harcadıkları emek devir alınacak, paketlere
-(yazılımlara) dair yapılacak güncellemeler bunların üzerine yapılacak.
-<LI>Kurulum uygulaması (installer), paket yönetim sistemi ve yapılandırma
-araçlarının ortak kullanacağı, merkezi bir altyapı (birleştirici katman)
-hazırlanacak.
-<LI>Birleştirici katman hazırlanmadan önce kurulum uygulaması, paket yönetim
-sistemi ve yapılandırma araçları ya bu katman olmadan hazırlanacak
-ya da var olan özgür yazılımlardan seçilecek.
-<LI>Dağıtım öncelikle Türkçe kullanan kullanıcılar için hazırlanacak.
+Updates and all development on packages will be performed on existing
+distributions' work.
+<LI>Central infrastructure that installer system, package management system
+and configuration managers use commonly will be prepared.
+<LI>Before connective layer will be ready; installer, package manager
+and configuration tools will be developed without that layer or will
+be chosen from existing free softwares.
+<LI>Distribution will be prepared for Turkish users first.
 </UL>
 
-<H3><A NAME="htoc9">2.3</A>&nbsp;&nbsp;Kaynaklar</H3>
+<H3><A NAME="htoc9">2.3</A>&nbsp;&nbsp;Resources</H3>
 <UL><LI>
-Özgür yazılımlar
-<LI>Mevcut Linux dağıtımları
-<LI>Açık standart komiteleri
-<LI>Dürtücü Teknolojiler üreten, diğer yenilikçi projeler
-</UL>
+Free softwares
+<LI>Existing Linux distributions
+<LI>Open standart committees
+<LI>Other projects that produces Impulsive Technologies</UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='index.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navhide'><img src='../../images/nav_forward.png'> Sonraki sayfa</td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
@@ -90,7 +87,7 @@ ya da var olan özgür yazılımlardan seçilecek.
 <p class="not">
 Information and documents on Uludağ Project web pages can be used freely anywhere with original source credit.
 <em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
+<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli, TÜRKİYE.</strong></em>
 For information and suggestion(s) please write to <a href="mailto:bilgi%20at%20uludag.org.tr">bilgi
 at uludag.org.tr</a>
 </p>
